--- a/lesson10/mocha/.mocharc.json
+++ b/lesson10/mocha/.mocharc.json
@@ -1,5 +1,5 @@
 {
     "extension": "ts",
     "spec": "tests/**/*.spec.ts",
-    "require": ["tsx", "./hooks/mocha-global-setup.ts"]
+    "require": ["tsx"]
 }
