--- a/lesson18/package.json
+++ b/lesson18/package.json
@@ -10,11 +10,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@playwright/test": "^1.51.1",
-    "@types/node": "^22.13.14",
     "@eslint/js": "^9.23.0",
+    "@playwright/test": "^1.51.1",
     "@stylistic/eslint-plugin": "^4.2.0",
     "@stylistic/eslint-plugin-ts": "^4.2.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@types/node": "^22.13.14",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
     "eslint": "^9.23.0",
