--- a/lesson14/package.json
+++ b/lesson14/package.json
@@ -23,6 +23,7 @@
     "@types/dotenv-safe": "^8.1.6",
     "@types/expect": "^1.20.4",
     "@types/mocha": "^10.0.10",
+    "@types/mochawesome": "^6.2.4",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
     "chai": "^5.2.0",
@@ -31,6 +32,7 @@
     "esrun": "^3.2.26",
     "globals": "^15.15.0",
     "mocha": "^11.1.0",
+    "mochawesome": "^7.1.3",
     "prettier": "3.4.2",
     "ts-mocha": "^11.1.0",
     "ts-node": "^10.9.2",
