--- a/lesson19/.gitignore
+++ b/lesson19/.gitignore
@@ -5,3 +5,9 @@ node_modules/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+.obs*/
+allure*/
+log/
+*.log
+allure-report/
+allure-results/
