--- a/lesson19/.gitignore
+++ b/lesson19/.gitignore
@@ -1,3 +1,13 @@
 
 # Playwright
 node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+.obs*/
+allure*/
+log/
+*.log
+allure-report/
+allure-results/
